fix overlap issue

--- a/slider/slider.css
+++ b/slider/slider.css
@@ -40,15 +40,14 @@
 }
 
 #emojiDisplay {
-  font-size: 3em; /* Adjusted font size */
+  font-size: 5em;
   text-align: center;
-  margin-top: 2em; /* Added margin for spacing */
 }
 
 #feelingTxt{
   font-size: 2em;
   text-align: center;
-  margin-top: 1em; /* Adjusted margin to reduce overlap */
+  margin-top: -10em;
   font-family: "Chakra Petch", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -56,15 +55,15 @@
 
 h1{
   text-align: center;
-  margin-bottom: 1em; /* Adjusted margin */
+  margin-bottom: -1em; /* Adjusted margin to fix overlap */
   font-family: "Chakra Petch", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 2em; /* Adjusted font size */
+  font-size: 3em;
 }
 
 p{
-  margin-top: 0.5em;
+  margin-top: -0.5em;
 }
 
 .dollar {
